RF: add schedulers, work round test errors

--- a/master.cfg
+++ b/master.cfg
@@ -1631,6 +1631,8 @@ def wheel_factory(python_version, pip_installs,
 
 WHEEL_SERVER = 'https://nipy.bic.berkeley.edu/scipy_installers'
 mpl_test_cmd = ['python', '-c',
+                'import os, shutil; '
+                'shutil.rmtree(os.path.expanduser("~/.matplotlib")); '
                 'import sys; '
                 'import matplotlib; '
                 'sys.exit(not matplotlib.test())']
@@ -1653,12 +1655,14 @@ test_commands = [nptest_command('numpy', verbose=None),
                  nptest_command('scipy', verbose=None),
                  mpl_test_cmd,
                  ['iptest'],
-                 ['nosetests', 'pandas'],
+                 # Some known fails for pandas tests version 0.13.1
+                 ['nosetests', 'pandas', '-e', 'test_fred_multi', '-e', 'test_fred_parts'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
 
 wheel_requires = '{0}/scipy-stats-data-1.0.txt'.format(WHEEL_SERVER)
+build_hour = 11
 for py_version in '2.7.6', '3.3.5', '3.4.0':
     for find_links, pre, suffix in (((), False, 'pypi'),
                                     ((WHEEL_SERVER,), False, 'staging'),
@@ -1678,15 +1682,24 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
                                     find_links = find_links)))
+    requires_builder_name = 'scipy-stack-{0}-wheel-requires'.format(py_version)
     c['builders'].append(BuilderConfig(
-        name='scipy-stack-{0}-wheel-requires'.format(py_version),
+        name=requires_builder_name,
         slavenames=osx_wheel_slaves,
         factory = wheel_factory(py_version,
-                                ((wheel_requires, '-r', False),
-                                 ('nose', '', False),
-                                 ('mock', '', False)),
+                                ((wheel_requires, '-r', False),),
                                 test_commands = test_commands,
                                 find_links = ())))
+    requires_scheduler_name = requires_builder_name + "-scheduler"
+    build_hour += 1
+    c['schedulers'].append(timed.Nightly(
+                    name=requires_scheduler_name,
+                    branch=None,
+                    builderNames=[requires_builder_name],
+                    change_filter=None,
+                    hour=build_hour,
+                    minute=0,
+                    onlyIfChanged=False))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
@@ -1754,7 +1767,7 @@ authz_cfg=authz.Authz(
     pingBuilder = False,
     stopBuild = 'auth',
     stopAllBuilds = False,
-    cancelPendingBuild = False,
+    cancelPendingBuild = 'auth',
 )
 c['status'].append(html.WebStatus(
     http_port=8010,
@@ -1832,7 +1845,7 @@ def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
     assert(len(c['builders']) == 174)
-    assert(len(c['schedulers']) == 232)
+    assert(len(c['schedulers']) == 235)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
