Update known fails for pandas

--- a/master.cfg
+++ b/master.cfg
@@ -1656,7 +1656,11 @@ test_commands = [nptest_command('numpy', verbose=None),
                  mpl_test_cmd,
                  ['iptest'],
                  # Some known fails for pandas tests version 0.13.1
-                 ['nosetests', 'pandas', '-e', 'test_fred_multi', '-e', 'test_fred_parts'],
+                 # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
+                 ['nosetests', 'pandas',
+                  '-e', 'test_fred_multi',
+                  '-e', 'test_fred_parts',
+                  '-e', 'pandas.io.tests.test_clipboard.TestClipboard'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
