BF: correct sympy error code, use quicker tests

--- a/master.cfg
+++ b/master.cfg
@@ -1647,10 +1647,10 @@ h5_test_cmd = ['python', '-c',
                'res = unittest.TextTestRunner(verbosity=3).run(suite); '
                'sys.exit(not res.wasSuccessful)']
 sympy_whl_test_cmd = ['python', '-c',
-                   'import sys; '
-                   'import sympy; '
-                   'open("matplotlibrc", "wt").write("backend : agg"); '
-                   'sys.exit(sympy.test("/core"))'] # too slow for full tests
+                      'import sys; '
+                      'import sympy; '
+                      # too slow for full tests
+                      'sys.exit(not sympy.test("/basic", "/util"))']
 test_commands = [nptest_command('numpy', verbose=None),
                  nptest_command('scipy', verbose=None),
                  mpl_test_cmd,
