RF: add clipboard test as skipped by Pandas

--- a/master.cfg
+++ b/master.cfg
@@ -1660,7 +1660,7 @@ test_commands = [nptest_command('numpy', verbose=None),
                  ['nosetests', 'pandas',
                   '-e', 'test_fred_multi',
                   '-e', 'test_fred_parts',
-                  '-e', 'pandas.io.tests.test_clipboard.TestClipboard'],
+                  '-e', 'test_clipboard'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
