Switch to Windows 7 machine for win32

--- a/master.cfg
+++ b/master.cfg
@@ -116,7 +116,7 @@ osx_leopard_intel_slaves = ['osx-10.5']
 osx_snowleopard_slaves = ['osx-10.6']
 osx_lion_slaves = ['osx-10.7']
 osx_mountainlion_slaves = ['osx-10.8']
-xp_32_slaves = ['xp-mini']
+win7_32_slaves = ['win7-32-mini']
 win7_64_slaves = ['mike-win7-64']
 arm_slaves = ['arm-raspberry-pi']
 fedora_slaves = ['i20-fed19']
@@ -767,7 +767,7 @@ c['change_source'] += [pandas_bot.poller(interval=18000)]
 c['schedulers'] = sum([
     nibabel_bot.schedulers(['nibabel-py2.6',
                            'nibabel-py2.6-32',
-                           'nibabel-py2.6-xp',
+                           'nibabel-py2.7-win32',
                            'nibabel-py2.7-win7',
                            'nibabel-py2.6-squeeze-sparc',
                            'nibabel-py2.7-wheezy-sparc',
@@ -787,7 +787,7 @@ c['schedulers'] = sum([
                           ]),
     nitime_bot.schedulers(['nitime-py2.6',
                           'nitime-py2.6-32',
-                          'nitime-py2.6-xp',
+                          'nitime-py2.7-win32',
                           'nitime-py2.6-arm',
                           'nitime-py2.7-fedora',
                           'nitime-py2.7-osx-10.6',
@@ -800,7 +800,7 @@ c['schedulers'] = sum([
                           ]),
     nipy_bot.schedulers(['nipy-py2.6',
                         'nipy-py2.6-32',
-                        'nipy-py2.6-xp',
+                        'nipy-py2.7-win32',
                         'nipy-py2.6-squeeze-sparc',
                         'nipy-py2.7-wheezy-sparc',
                         'nipy-py2.x-sid-sparc',
@@ -818,7 +818,7 @@ c['schedulers'] = sum([
                        ]),
     dipy_bot.schedulers(['dipy-py2.6',
                         'dipy-py2.6-32',
-                        'dipy-py2.6-xp',
+                        'dipy-py2.7-win32',
                         'dipy-py2.6-squeeze-sparc',
                         'dipy-py2.7-wheezy-sparc',
                         'dipy-py2.x-sid-sparc',
@@ -834,7 +834,7 @@ c['schedulers'] = sum([
                        ]),
     nipype_bot.schedulers(['nipype-py2.6',
                           'nipype-py2.6-32',
-                          'nipype-py2.6-xp',
+                          'nipype-py2.7-win32',
                           'nipype-py2.7-fedora',
                           'nipype-py2.7-osx-10.6',
                           'nipype-py2.7-osx-10.8',
@@ -843,7 +843,7 @@ c['schedulers'] = sum([
                        ]),
     regreg_bot.schedulers(['regreg-py2.6',
                           'regreg-py2.6-32',
-                          'regreg-py2.6-xp',
+                          'regreg-py2.7-win32',
                           'regreg-py2.7-fedora',
                           'regreg-py2.7-osx-10.6',
                           'regreg-py2.7-osx-10.7',
@@ -1002,7 +1002,7 @@ c['builders'] = []
 nibabel_test_cmd = shlex.split('nosetests --verbosity=3 --with-doctest nibabel')
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-27',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
@@ -1010,7 +1010,7 @@ c['builders'].append(BuilderConfig(
 ))
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-27-whl',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
         'whl',
         test_cmd = nibabel_test_cmd,
@@ -1021,7 +1021,7 @@ c['builders'].append(BuilderConfig(
 # to remove use of __stdout__ and __stderr__ in numpy distutils
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist32-32',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
@@ -1039,7 +1039,7 @@ c['builders'].append(BuilderConfig(
 nipy_test_cmd = nptest_command('nipy', doctests=True)
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-26',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
@@ -1048,7 +1048,7 @@ c['builders'].append(BuilderConfig(
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-27',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
@@ -1057,7 +1057,7 @@ c['builders'].append(BuilderConfig(
 ))
 c['builders'].append(BuilderConfig(
     name='nipy-bdist32-32',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
@@ -1093,7 +1093,7 @@ c['builders'].append(BuilderConfig(
 win32_dipy_test_cmd = ['python',  r'dipnost.py', 'dipy']
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-26',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
@@ -1103,7 +1103,7 @@ c['builders'].append(BuilderConfig(
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
@@ -1113,7 +1113,7 @@ c['builders'].append(BuilderConfig(
 ))
 c['builders'].append(BuilderConfig(
     name='dipy-bdist32-32',
-    slavenames=xp_32_slaves,
+    slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
@@ -1151,7 +1151,7 @@ sympy_test_cmd = ['python', '-c',
                   'sys.exit(not (dt and t))']
 pip_deps = ('nose',)
 for slavenames, bdist_suffix in (
-    (xp_32_slaves, '32'),
+    (win7_32_slaves, '32'),
     (win7_64_slaves, '64')):
     py2_name = 'sympy-bdist{0}-27'.format(bdist_suffix)
     py3_sched_name = 'sympy-bdist{0}-33-scheduler'.format(bdist_suffix)
@@ -1380,7 +1380,7 @@ c['builders'] += nibabel_bot.build_builders(
      ('nibabel-py2.7-ppc', debian_ppc_slaves),
      ('nibabel-py2.6-arm', arm_slaves),
      ('nibabel-py2.7-fedora', fedora_slaves),
-     ('nibabel-py2.6-xp', xp_32_slaves),
+     ('nibabel-py2.7-win32', win7_32_slaves),
      ('nibabel-py2.7-win7', win7_64_slaves),
      ('nibabel-py2.6-squeeze-sparc', sparc_slaves),
      ('nibabel-py2.7-wheezy-sparc', sparc_slaves_wheezy),
@@ -1412,7 +1412,7 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arm', arm_slaves),
      ('nitime-py2.7-fedora', fedora_slaves),
-     ('nitime-py2.6-xp', xp_32_slaves)))
+     ('nitime-py2.7-win32', win7_32_slaves)))
 # pyarbus
 c['builders'] += pyarbus_bot.build_builders(
     (('pyarbus-py2.6', linux_64_slaves),))
@@ -1427,7 +1427,7 @@ c['builders'] += nipy_bot.build_builders(
      ('nipy-py2.7-ppc', debian_ppc_slaves),
      ('nipy-py2.6-arm', arm_slaves),
      ('nipy-py2.7-fedora', fedora_slaves),
-     ('nipy-py2.6-xp', xp_32_slaves),
+     ('nipy-py2.7-win32', win7_32_slaves),
      ('nipy-py2.6-squeeze-sparc', sparc_slaves),
      ('nipy-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('nipy-py2.x-sid-sparc', sparc_slaves_sid)))
@@ -1456,7 +1456,7 @@ c['builders'] += dipy_bot.build_builders((
      ('dipy-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('dipy-py2.6-arm', arm_slaves),
      ('dipy-py2.7-fedora', fedora_slaves),
-     ('dipy-py2.6-xp', xp_32_slaves),
+     ('dipy-py2.7-win32', win7_32_slaves),
      ('dipy-py2.6-squeeze-sparc', sparc_slaves),
      ('dipy-py2.7-wheezy-sparc', sparc_slaves_wheezy),
      ('dipy-py2.x-sid-sparc', sparc_slaves_sid)))
@@ -1476,7 +1476,7 @@ c['builders'] += nipype_bot.build_builders(
      ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipype-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nipype-py2.7-fedora', fedora_slaves),
-     ('nipype-py2.6-xp', xp_32_slaves)))
+     ('nipype-py2.7-win32', win7_32_slaves)))
 c['builders'] += regreg_bot.build_builders(
     (('regreg-py2.6', linux_64_slaves),
      ('regreg-py2.6-32', linux_32_slaves),
@@ -1486,7 +1486,7 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('regreg-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
      ('regreg-py2.7-fedora', fedora_slaves),
-     ('regreg-py2.6-xp', xp_32_slaves)))
+     ('regreg-py2.7-win32', win7_32_slaves)))
 # Pandas - can be tested only on recent debian releases
 c['builders'] += pandas_bot.build_builders(
     (('pandas-py2.x-sid-sparc', sparc_slaves_sid),
@@ -1527,7 +1527,7 @@ c['builders'] += pymvpa_bot.build_builders(
      ('pymvpa-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('pymvpa-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('pymvpa-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('pymvpa-py2.6-xp', xp_32_slaves),
+     ('pymvpa-py2.7-win32', win7_32_slaves),
     ), schedulers=c['schedulers'])
 # Sklearn
 c['builders'] += sklearn_bot.build_builders((
