Try adding requirements file to properties

--- a/master.cfg
+++ b/master.cfg
@@ -1665,7 +1665,8 @@ test_commands = [nptest_command('numpy', verbose=None),
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
 
-wheel_requires = '{0}/scipy-stats-data-1.0.txt'.format(WHEEL_SERVER)
+default_requires = '{0}/scipy-stats-data-1.0.txt'.format(WHEEL_SERVER)
+wheel_requires = Property('wheel_requires', default_requires)
 build_hour = 11
 for py_version in '2.7.6', '3.3.5', '3.4.0':
     for find_links, pre, suffix in (((), False, 'pypi'),
@@ -1704,15 +1705,25 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
                     hour=build_hour,
                     minute=0,
                     onlyIfChanged=False))
+    c['schedulers'].append(ForceScheduler(
+        name=requires_builder_name,
+        builderNames=[requires_builder_name],
+        properties= StringParameter(name="wheel_requires",
+                    label="set pip requires file for installation",
+                    default=default_requires, size=200)))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
 for b in c['builders']:
     b.category = b.name.split('-')[0]
 
-# Add force scheduler to all builders
+# Add force scheduler to all builders that don't have one
+scheduler_names = [s.name for s in c['schedulers']
+                   if isinstance(s, ForceScheduler)]
 for b in c['builders']:
-    c['schedulers'].append(ForceScheduler(name=b.name, builderNames=[b.name]))
+    if not b.name in scheduler_names:
+        c['schedulers'].append(
+            ForceScheduler(name=b.name, builderNames=[b.name]))
 
 
 ####### STATUS TARGETS
