--- a/master.cfg
+++ b/master.cfg
@@ -1708,9 +1708,9 @@ for py_version in '2.7.6', '3.3.5', '3.4.0':
     c['schedulers'].append(ForceScheduler(
         name=requires_builder_name,
         builderNames=[requires_builder_name],
-        properties= StringParameter(name="wheel_requires",
+        properties= [StringParameter(name="wheel_requires",
                     label="set pip requires file for installation",
-                    default=default_requires, size=200)))
+                    default=default_requires, size=200)]))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
