--- a/master.cfg
+++ b/master.cfg
@@ -887,15 +887,17 @@ c['schedulers'] = sum([
     pymvpa_bot.nightly_scheduler(['pymvpa-doc-builder'], 'doc', 4, 20, True),
     # Checks for easy_install and pip install
     # Windows 32 nightly builds
-    nipy_bot.nightly_scheduler(['nipy-bdist32-26'], 'exe-26', 2, 10, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 20, True),
-    nipy_bot.nightly_scheduler(['nipy-bdist32-32'], 'exe-32', 2, 30, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-27'], 'exe-27', 2, 10, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-33'], 'exe-33', 2, 20, True),
+    nipy_bot.nightly_scheduler(['nipy-bdist32-34'], 'exe-34', 2, 30, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-27'],
                                   'exe-27', 2, 40, True),
     nibabel_bot.nightly_scheduler(['nibabel-bdist32-27-whl'],
                                   'whl-27', 2, 40, True),
-    nibabel_bot.nightly_scheduler(['nibabel-bdist32-32'],
-                                  'exe-32', 2, 50, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-33'],
+                                  'exe-33', 2, 50, True),
+    nibabel_bot.nightly_scheduler(['nibabel-bdist32-34'],
+                                  'exe-34', 3, 00, True),
     # Windows 64 nightly builds
     nibabel_bot.nightly_scheduler(['nibabel-bdist64-26'],
                                   'exe64-26', 2, 00, True),
@@ -904,9 +906,9 @@ c['schedulers'] = sum([
     nipy_bot.nightly_scheduler(['nipy-bdist-mpkg-3.3'], 'egg-33', 2, 30, True),
     # Dipy
     # Windows 32 nightly builds
-    dipy_bot.nightly_scheduler(['dipy-bdist32-26'], 'dipy-exe-26', 3, 10, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 20, True),
-    dipy_bot.nightly_scheduler(['dipy-bdist32-32'], 'dipy-exe-32', 3, 30, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-27'], 'dipy-exe-27', 3, 10, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-33'], 'dipy-exe-33', 3, 20, True),
+    dipy_bot.nightly_scheduler(['dipy-bdist32-34'], 'dipy-exe-34', 3, 30, True),
     # OSX nightlies
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
@@ -1020,12 +1022,20 @@ c['builders'].append(BuilderConfig(
 # git diff ad9c2f4~1..ad9c2f4
 # to remove use of __stdout__ and __stderr__ in numpy distutils
 c['builders'].append(BuilderConfig(
-    name='nibabel-bdist32-32',
+    name='nibabel-bdist32-33',
     slavenames=win7_32_slaves,
     factory=nibabel_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        python = r'c:\Python32\python.exe')
+        python = r'c:\Python33\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='nibabel-bdist32-34',
+    slavenames=win7_32_slaves,
+    factory=nibabel_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python34\python.exe')
 ))
 c['builders'].append(BuilderConfig(
     name='nibabel-bdist64-26',
@@ -1038,15 +1048,6 @@ c['builders'].append(BuilderConfig(
 # nipy exe builders
 nipy_test_cmd = nptest_command('nipy', doctests=True)
 c['builders'].append(BuilderConfig(
-    name='nipy-bdist32-26',
-    slavenames=win7_32_slaves,
-    factory=nipy_bot.bdist_factory(
-        'exe',
-        test_cmd = nipy_test_cmd,
-        python = r'c:\Python26\python.exe',
-        pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
-))
-c['builders'].append(BuilderConfig(
     name='nipy-bdist32-27',
     slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
@@ -1056,12 +1057,21 @@ c['builders'].append(BuilderConfig(
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 c['builders'].append(BuilderConfig(
-    name='nipy-bdist32-32',
+    name='nipy-bdist32-33',
     slavenames=win7_32_slaves,
     factory=nipy_bot.bdist_factory(
         'exe',
         test_cmd = nipy_test_cmd,
-        python = r'c:\Python32\python.exe',
+        python = r'c:\Python33\python.exe',
+        pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
+))
+c['builders'].append(BuilderConfig(
+    name='nipy-bdist32-34',
+    slavenames=win7_32_slaves,
+    factory=nipy_bot.bdist_factory(
+        'exe',
+        test_cmd = nipy_test_cmd,
+        python = r'c:\Python34\python.exe',
         pre_build_cmds = [['python', r'tools\touch_cython_cs.py']])
 ))
 # Add bdist builders for OSX
@@ -1092,16 +1102,6 @@ c['builders'].append(BuilderConfig(
 # on Windows 32 bit
 win32_dipy_test_cmd = ['python',  r'dipnost.py', 'dipy']
 c['builders'].append(BuilderConfig(
-    name='dipy-bdist32-26',
-    slavenames=win7_32_slaves,
-    factory=dipy_bot.bdist_factory(
-        'exe',
-        # Copy dipnost as py file into (later) working directory
-        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
-        test_cmd=win32_dipy_test_cmd,
-        python=r'c:\Python26\python.exe')
-))
-c['builders'].append(BuilderConfig(
     name='dipy-bdist32-27',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
@@ -1112,14 +1112,24 @@ c['builders'].append(BuilderConfig(
         python=r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
-    name='dipy-bdist32-32',
+    name='dipy-bdist32-33',
     slavenames=win7_32_slaves,
     factory=dipy_bot.bdist_factory(
         'exe',
         # Copy dipnost as py file into (later) working directory
         pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
         test_cmd=win32_dipy_test_cmd,
-        python=r'c:\Python32\python.exe')
+        python=r'c:\Python33\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='dipy-bdist32-34',
+    slavenames=win7_32_slaves,
+    factory=dipy_bot.bdist_factory(
+        'exe',
+        # Copy dipnost as py file into (later) working directory
+        pre_build_cmds = [['copy', r'tools\dipnost', r'venv\dipnost.py']],
+        test_cmd=win32_dipy_test_cmd,
+        python=r'c:\Python34\python.exe')
 ))
 # Add bdist builders for OSX
 # Each of the tested _system_ pythons will need:
@@ -1859,8 +1869,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 174)
-    assert(len(c['schedulers']) == 235)
+    assert(len(c['builders']) == 175)
+    assert(len(c['schedulers']) == 237)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
