Working round known scipy-stack test failures

--- a/master.cfg
+++ b/master.cfg
@@ -1640,16 +1640,19 @@ def wheel_factory(python_version, pip_installs,
 
 
 WHEEL_SERVER = 'https://nipy.bic.berkeley.edu/scipy_installers'
-mpl_test_cmd = ['python', '-c',
-                'import os, shutil; '
-                'shutil.rmtree(os.path.expanduser("~/.matplotlib")); '
-                'import sys; '
-                'import matplotlib; '
-                'sys.exit(not matplotlib.test())']
+
+MPL_TEST_FNAME = 'https://raw.githubusercontent.com/matplotlib/matplotlib/master/tests.py'
+mpl_test_setup1 = ['python', 'bs_tools.py', 'get-url', MPL_TEST_FNAME, 'mpl_test.py']
+mpl_test_setup2 = ['python', '-c',
+                   'import os, shutil; '
+                   'shutil.rmtree(os.path.expanduser("~/.matplotlib"))']
+# Known mpl test failure for Python 3.4
+# https://github.com/matplotlib/matplotlib/pull/2981
+mpl_test_cmd = ['python', 'mpl_test.py', '-e', 'test_override_builtins']
 numexpr_test_cmd = ['python', '-c',
-                 'import sys; '
-                 'import numexpr; '
-                 'sys.exit(not numexpr.test())']
+                    'import sys; '
+                    'import numexpr; '
+                    'sys.exit(not numexpr.test())']
 h5_test_cmd = ['python', '-c',
                'import sys; '
                'import unittest; '
@@ -1663,14 +1666,18 @@ sympy_whl_test_cmd = ['python', '-c',
                       'sys.exit(not sympy.test("/basic", "/util"))']
 test_commands = [nptest_command('numpy', verbose=None),
                  nptest_command('scipy', verbose=None),
+                 mpl_test_setup1,
+                 mpl_test_setup2,
                  mpl_test_cmd,
                  ['iptest'],
-                 # Some known fails for pandas tests version 0.13.1
+                 # Some known fails for pandas tests version 0.14.0
                  # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
                  ['nosetests', 'pandas',
                   '-e', 'test_fred_multi',
                   '-e', 'test_fred_parts',
-                  '-e', 'test_clipboard'],
+                  '-e', 'test_clipboard',
+                  # https://github.com/pydata/pandas/issues/7289
+                  '-e', 'test_range_slice_outofbounds'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
@@ -1678,7 +1685,7 @@ test_commands = [nptest_command('numpy', verbose=None),
 default_requires = '{0}/scipy-stats-data-1.0.txt'.format(WHEEL_SERVER)
 wheel_requires = Property('wheel_requires', default_requires)
 build_hour = 11
-for py_version in '2.7.6', '3.3.5', '3.4.0':
+for py_version in '2.7.6', '3.3.5', '3.4.1':
     for find_links, pre, suffix in (((), False, 'pypi'),
                                     ((WHEEL_SERVER,), False, 'staging'),
                                     ((WHEEL_SERVER,), True, 'pre')):
