--- a/master.cfg
+++ b/master.cfg
@@ -83,10 +83,15 @@ from buildbot.process.properties import Property, Interpolate
 from buildbot.process import properties
 from buildbot.config import BuilderConfig
 
+HTTP_SERVER_URL='https://nipy.bic.berkeley.edu/scipy_installers/'
+
+# Directory for cached downloads of files needed by buildbots
+HTTP_CACHE_URL = HTTP_SERVER_URL + 'buildbot-files/'
+
 # Canonical URL for ez_setup
-# EZ_SETUP_URL = 'https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py'
+# https://bitbucket.org/pypa/setuptools/raw/bootstrap/ez_setup.py
 # Cached copy set by mb312 account crontab
-EZ_SETUP_URL = 'https://nipy.bic.berkeley.edu/scipy_installers/ez_setup.py'
+EZ_SETUP_URL = HTTP_CACHE_URL + 'ez_setup.py'
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -1639,9 +1644,10 @@ def wheel_factory(python_version, pip_installs,
     return whl_fac
 
 
-WHEEL_SERVER = 'https://nipy.bic.berkeley.edu/scipy_installers'
-
-MPL_TEST_FNAME = 'https://raw.githubusercontent.com/matplotlib/matplotlib/master/tests.py'
+WHEEL_SERVER = HTTP_SERVER_URL
+# Cached copy of
+# https://raw.githubusercontent.com/matplotlib/matplotlib/master/tests.py
+MPL_TEST_FNAME = HTTP_CACHE_URL + 'mpl_tests.py'
 mpl_test_setup1 = ['python', 'bs_tools.py', 'get-url', MPL_TEST_FNAME, 'mpl_test.py']
 mpl_test_setup2 = ['python', '-c',
                    'import os, shutil; '
@@ -1671,18 +1677,21 @@ test_commands = [nptest_command('numpy', verbose=None),
                  mpl_test_cmd,
                  ['iptest'],
                  # Some known fails for pandas tests version 0.14.0
-                 # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
                  ['nosetests', 'pandas',
+                  # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
                   '-e', 'test_fred_multi',
                   '-e', 'test_fred_parts',
                   '-e', 'test_clipboard',
                   # https://github.com/pydata/pandas/issues/7289
-                  '-e', 'test_range_slice_outofbounds'],
+                  '-e', 'test_range_slice_outofbounds',
+                  # https://github.com/pydata/pandas/pull/7298
+                  '-e', 'test_dict_complex',
+                  '-e', 'test_dict_numpy_complex'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
 
-default_requires = '{0}/scipy-stats-data-1.0.txt'.format(WHEEL_SERVER)
+default_requires = WHEEL_SERVER + 'scipy-stats-data-1.0.txt'
 wheel_requires = Property('wheel_requires', default_requires)
 build_hour = 11
 for py_version in '2.7.6', '3.3.5', '3.4.1':
