Further fixes and refactorings of URL downloads

--- a/master.cfg
+++ b/master.cfg
@@ -1619,6 +1619,9 @@ def wheel_factory(python_version, pip_installs,
     whl_fac.addStep(SetPropertyFromCommand(
         command = ['python', 'bs_tools.py', 'abspath', 'venv'],
         property = 'venv_dir'))
+    whl_fac.addStep(SetPropertyFromCommand(
+        command = ['python', 'bs_tools.py', 'abspath', 'bs_tools.py'],
+        property = 'bs_tools'))
     # Set env, with virtualenv in front of the path
     env = {'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
     workdir = Interpolate("%(prop:venv_dir)s")
@@ -1647,14 +1650,15 @@ def wheel_factory(python_version, pip_installs,
 WHEEL_SERVER = HTTP_SERVER_URL
 # Cached copy of
 # https://raw.githubusercontent.com/matplotlib/matplotlib/master/tests.py
-MPL_TEST_FNAME = HTTP_CACHE_URL + 'mpl_tests.py'
-mpl_test_setup1 = ['python', 'bs_tools.py', 'get-url', MPL_TEST_FNAME, 'mpl_test.py']
+MPL_TESTS_FNAME = 'mpl_tests.py'
+MPL_TESTS_URL = HTTP_CACHE_URL + MPL_TESTS_FNAME
+mpl_test_setup1 = ['python', Property('bs_tools'), 'get-url', MPL_TESTS_URL, MPL_TESTS_FNAME]
 mpl_test_setup2 = ['python', '-c',
                    'import os, shutil; '
                    'shutil.rmtree(os.path.expanduser("~/.matplotlib"))']
 # Known mpl test failure for Python 3.4
 # https://github.com/matplotlib/matplotlib/pull/2981
-mpl_test_cmd = ['python', 'mpl_test.py', '-e', 'test_override_builtins']
+mpl_test_cmd = ['python', MPL_TESTS_FNAME, '-e', 'test_override_builtins']
 numexpr_test_cmd = ['python', '-c',
                     'import sys; '
                     'import numexpr; '
