ENH: Added numpy master branch to be tested on sparc sid boxes

--- a/master.cfg
+++ b/master.cfg
@@ -882,6 +882,8 @@ c['schedulers'] = sum([
                         'numpy-py3.3-osx-10.8',
                         'numpy-py3.4-osx-10.8',
                         'numpy-py2.6-osx-10.5-ppc',
+                        'numpy-py2.x-sid-sparc',
+                        'numpy-py3.x-sid-sparc',
                         ]),], []) + \
     [
     # Doc builds
@@ -1598,8 +1600,11 @@ c['builders'] += numpy_bot.build_builders(
      ('numpy-py3.3-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py3.4-osx-10.8', osx_mountainlion_slaves),
      ('numpy-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
+     ('numpy-py2.x-sid-sparc', sparc_slaves_sid),
     ))
-
+c['builders'] += numpy_bot.build_builders(
+    (('numpy-py3.x-sid-sparc', sparc_slaves_sid),
+     ), python='python3')
 
 def wheel_factory(python_version, pip_installs,
                   test_commands=(),
@@ -1895,8 +1900,8 @@ def test_fail2ban_08_state(c):
 def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
-    assert(len(c['builders']) == 175)
-    assert(len(c['schedulers']) == 237)
+    assert(len(c['builders']) == 177)
+    assert(len(c['schedulers']) == 239)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
