For now, test nitime python3 on linux only.
Will add others, when we figure this one out.

--- a/master.cfg
+++ b/master.cfg
@@ -1431,7 +1431,7 @@ c['builders'] += nitime_bot.build_builders(
     (('nitime-py3.2', linux_64_slaves),),
     python='python3.2')
 c['builders'] += nitime_bot.build_builders(
-    (('nitime-py3.3', osx_snowleopard_slaves),),
+    (('nitime-py3.3', linux_64_slaves),),
     python='python3.3')
 
 # pyarbus
