Add --no-index to scipy stack testing

--- a/master.cfg
+++ b/master.cfg
@@ -1639,7 +1639,7 @@ def wheel_factory(python_version, pip_installs,
     for name, version, pre_tf in pip_installs:
         if version:
             if version == '-r':
-                names = ['-r', name]
+                names = ['-r', name, '--no-index']
             elif pre_tf:
                 raise ValueError("cannot use --pre flag with version")
             else:
