RF: remove fixed known-fails for Pandas

--- a/master.cfg
+++ b/master.cfg
@@ -1694,14 +1694,7 @@ test_commands = [nptest_command('numpy', verbose=None),
                  # Some known fails for pandas tests version 0.14.0
                  ['nosetests', 'pandas',
                   # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
-                  '-e', 'test_fred_multi',
-                  '-e', 'test_fred_parts',
-                  '-e', 'test_clipboard',
-                  # https://github.com/pydata/pandas/issues/7289
-                  '-e', 'test_range_slice_outofbounds',
-                  # https://github.com/pydata/pandas/pull/7298
-                  '-e', 'test_dict_complex',
-                  '-e', 'test_dict_numpy_complex'],
+                  '-e', 'test_clipboard'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
