Add new property to GUI

--- a/master.cfg
+++ b/master.cfg
@@ -1750,9 +1750,15 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
     c['schedulers'].append(ForceScheduler(
         name=requires_builder_name,
         builderNames=[requires_builder_name],
-        properties= [StringParameter(name="wheel_requires",
-                    label="set pip requires file for installation",
-                    default=default_requires, size=200)]))
+        properties= [
+            StringParameter(
+                name="wheel_requires",
+                label="set pip requires file for installation",
+                default=default_requires, size=200),
+            StringParameter(
+                name="wheel_extra",
+                label="other pip argument for install command",
+                default='', size=200)]))
 
 
 # Assign all builders categories -- project names, to improve status visualizations
