Revert "??? - maybe foolish attempt to use rendered props"
This reverts commit e6bbc0ec806fd8b5d5569a865d164bddbb0a086d.

--- a/master.cfg
+++ b/master.cfg
@@ -79,7 +79,7 @@ from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
 from buildbot.steps.master import SetProperty
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
 from buildbot.steps.trigger import Trigger
-from buildbot.process.properties import Property, Interpolate, renderer
+from buildbot.process.properties import Property, Interpolate
 from buildbot.process import properties
 from buildbot.config import BuilderConfig
 
@@ -1607,17 +1607,9 @@ c['builders'] += numpy_bot.build_builders(
      ), python='python3')
 
 
-@renderer
-def shlex_wheel_extra(props):
-    extras = props.getProperty('wheel_extra')
-    if extras:
-        return shlex.split(extras)
-    return []
-
-
 def wheel_factory(python_version, pip_installs,
                   test_commands=(),
-                  wheel_extra=shlex_wheel_extra,
+                  wheel_extra='',
                   find_links=()):
     """ Make a factory for the wheel build slave """
     # OSX wheel builders
@@ -1646,9 +1638,8 @@ def wheel_factory(python_version, pip_installs,
     # Set env, with virtualenv in front of the path
     env = {'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
     workdir = Interpolate("%(prop:venv_dir)s")
-    # Extra arguments to pip
     for name, version, pre_tf in pip_installs:
-        names = wheel_extra
+        names = [wheel_extra]
         if pre_tf:
             names += ['--pre']
         if version:
@@ -1735,7 +1726,7 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
                                      ('ipython[notebook,test]', '', pre),
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
-                                    wheel_extra = shlex_wheel_extra,
+                                    wheel_extra = wheel_extra,
                                     find_links = find_links)))
     requires_builder_name = 'scipy-stack-{0}-wheel-requires'.format(py_version)
     c['builders'].append(BuilderConfig(
@@ -1744,7 +1735,7 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
         factory = wheel_factory(py_version,
                                 ((wheel_requires, '-r', False),),
                                 test_commands = test_commands,
-                                wheel_extra = shlex_wheel_extra,
+                                wheel_extra = wheel_extra,
                                 find_links = ())))
     requires_scheduler_name = requires_builder_name + "-scheduler"
     build_hour += 1
