Revert "NF: add a user-defined arg to pip"
This reverts commit c3504223e9b90ecae421b6e6f89e9702905bbb75.

--- a/master.cfg
+++ b/master.cfg
@@ -1602,10 +1602,8 @@ c['builders'] += numpy_bot.build_builders(
     (('numpy-py3.x-sid-sparc', sparc_slaves_sid),
      ), python='python3')
 
-
 def wheel_factory(python_version, pip_installs,
                   test_commands=(),
-                  wheel_extra='',
                   find_links=()):
     """ Make a factory for the wheel build slave """
     # OSX wheel builders
@@ -1635,18 +1633,17 @@ def wheel_factory(python_version, pip_installs,
     env = {'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
     workdir = Interpolate("%(prop:venv_dir)s")
     for name, version, pre_tf in pip_installs:
-        names = [wheel_extra]
-        if pre_tf:
-            names += ['--pre']
         if version:
             if version == '-r':
-                names += ['-r', name]
+                names = ['-r', name]
             elif pre_tf:
                 raise ValueError("cannot use --pre flag with version")
             else:
-                names += ['{0}=={1}'.format(name, version)]
+                names = ['{0}=={1}'.format(name, version)]
         else:
-            names += [name]
+            names = [name]
+        if pre_tf:
+            names = ['--pre'] + names
         whl_fac.addStep(ShellCommand(command=pip_cmd + names,
                                      env=env,
                                      workdir=workdir))
@@ -1699,10 +1696,7 @@ test_commands = [nptest_command('numpy', verbose=None),
                  sympy_whl_test_cmd]
 
 default_requires = WHEEL_SERVER + 'scipy-stats-data-1.0.txt'
-# Can set the default requirements file from build GUI
 wheel_requires = Property('wheel_requires', default_requires)
-# Can add an extra argument to each pip command from build GUI
-wheel_extra = Property('wheel_extra', '')
 build_hour = 11
 for py_version in '2.7.6', '3.3.5', '3.4.1':
     for find_links, pre, suffix in (((), False, 'pypi'),
@@ -1722,7 +1716,6 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
                                      ('ipython[notebook,test]', '', pre),
                                      ('h5py', '', pre)),
                                     test_commands = test_commands,
-                                    wheel_extra = wheel_extra,
                                     find_links = find_links)))
     requires_builder_name = 'scipy-stack-{0}-wheel-requires'.format(py_version)
     c['builders'].append(BuilderConfig(
@@ -1731,7 +1724,6 @@ for py_version in '2.7.6', '3.3.5', '3.4.1':
         factory = wheel_factory(py_version,
                                 ((wheel_requires, '-r', False),),
                                 test_commands = test_commands,
-                                wheel_extra = wheel_extra,
                                 find_links = ())))
     requires_scheduler_name = requires_builder_name + "-scheduler"
     build_hour += 1
