NF: add a test rig for running locally
Refactor getting passwords from local files

--- a/master.cfg
+++ b/master.cfg
@@ -76,11 +76,9 @@ from buildbot.schedulers.triggerable import Triggerable
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
-from buildbot.steps.master import SetProperty
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
 from buildbot.steps.trigger import Trigger
 from buildbot.process.properties import Property, Interpolate
-from buildbot.process import properties
 from buildbot.config import BuilderConfig
 
 HTTP_SERVER_URL='https://nipy.bic.berkeley.edu/scipy_installers/'
@@ -97,18 +95,44 @@ EZ_SETUP_URL = HTTP_CACHE_URL + 'ez_setup.py'
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
 
-####### BUILDSLAVES
+"""
+Load local setup from python module
+Local setup is:
 
-# Get passwords from file not in repository.  `slave_pass.py` defines a dict,
-# `slave_passes` with key, value pairs defining (slave_name, slave_password)
-import slave_pass as s_p
-reload(s_p)
+* master_url : str; URL that the master serves on.  Putting this in the setup
+  allows us to run master on another machine for debugging
+* slave_portnum : int; slave port number, as above
+* slave_passes : dict; key, value pairs of (slave name, password) giving slave
+  names and slave password.
+
+Don't store local_setup in version control with real passwords !  Use
+secret_passwords.py instead, and don't put in version control.
+"""
+import local_setup
+reload(local_setup) # so buildbot reconfig refreshes these parameters
+
+# Check parameters in setup
+for attr_name in ('slave_passes', 'master_url', 'slave_port'):
+    assert hasattr(local_setup, attr_name)
+
+# Fetch any secret passwords.  We're using this trick so it is harder to save
+# the secret passwords accidentally into version control
+try:
+    import secret_passwords
+    reload(secret_passwords)
+except ImportError:
+    pass
+else:
+    for slavename, password in secret_passwords.slave_passes:
+        local_setup.slave_passes[slavename] = password
+
 # Check that slave names are unique
-if len(set(s_p.slave_passes)) != len(s_p.slave_passes):
+if len(set(local_setup.slave_passes)) != len(local_setup.slave_passes):
     raise ValueError('Slave names must be unique')
 
-experimental = ['pi-ApxuMed',]
+####### BUILDSLAVES
 
+# Slave groups
 linux_64_slaves = ['tom-standard']
 linux_32_slaves = ['bongoslave']
 debian_ppc_slaves = ['debian-ppc-32']
@@ -157,7 +181,7 @@ add_lock(slave_locks,
 # a BuildSlave object, specifying a unique slave name and password.  The same
 # slave name and password must be configured on the slave.
 slaves = [BuildSlave(slave_name, slave_pass, locks=slave_locks.get(slave_name, None))
-    for slave_name, slave_pass in s_p.slave_passes.items()]
+    for slave_name, slave_pass in local_setup.slave_passes.items()]
 
 # slave names must be unique
 c['slaves'] = slaves
@@ -165,7 +189,7 @@ c['slaves'] = slaves
 # 'slavePortnum' defines the TCP port to listen on for connections from slaves.
 # This must match the value configured into the buildslaves (with their
 # --master option)
-c['slavePortnum'] = 9989
+c['slavePortnum'] = local_setup.slave_port
 
 def sanitize_branch_name(name):
     return name.replace('/', '+')
@@ -1834,7 +1858,7 @@ c['titleURL'] = "http://nipy.org"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://nipy.bic.berkeley.edu/"
+c['buildbotURL'] = local_setup.master_url
 
 ####### DB URL
 
