BF: fix iteration over key, value in dict

--- a/master.cfg
+++ b/master.cfg
@@ -123,7 +123,7 @@ try:
 except ImportError:
     pass
 else:
-    for slavename, password in secret_passwords.slave_passes:
+    for slavename, password in secret_passwords.slave_passes.items():
         local_setup.slave_passes[slavename] = password
 
 # Check that slave names are unique
