Put in some new panda exclusions

--- a/master.cfg
+++ b/master.cfg
@@ -1713,8 +1713,12 @@ test_commands = [nptest_command('numpy', verbose=None),
                  ['iptest'],
                  # Some known fails for pandas tests version 0.14.1
                  ['nosetests', 'pandas',
-                  # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
-                  '-e', 'test_clipboard'],
+                 # Error in test_fred fixed by f6f84db
+                 '-e', 'test_fred',
+                 # https://groups.google.com/d/msg/pydata/AzMPFAE9bhw/hs4H516gS4YJ
+                 '-e', 'test_clipboard',
+                 # Error in datetime parsing apparently addressed by 0621f9f
+                 '-e', 'test_replace_datetime'],
                  h5_test_cmd,
                  numexpr_test_cmd,
                  sympy_whl_test_cmd]
