Add markupsafe and tornado tests (commented out)

--- a/master.cfg
+++ b/master.cfg
@@ -1705,7 +1705,11 @@ sympy_whl_test_cmd = ['python', '-c',
                       'import sympy; '
                       # too slow for full tests
                       'sys.exit(not sympy.test("/basic", "/util"))']
-test_commands = [nptest_command('numpy', verbose=None),
+test_commands = [['nosetests', 'markupsafe'],
+                 # Tornado tests failing on this system
+                 # See: https://github.com/tornadoweb/tornado/issues/1136
+                 #['python', '-m', 'tornado.test.runtests'],
+                 nptest_command('numpy', verbose=None),
                  nptest_command('scipy', verbose=None),
                  mpl_test_setup1,
                  mpl_test_setup2,
