BF: throttle Thomas' and Min's machines

--- a/master.cfg
+++ b/master.cfg
@@ -177,6 +177,11 @@ add_lock(slave_locks,
          osx_wheel_slaves,
          MasterLock("wheel-usr-local", maxCount=1), 'counting')
 
+# These are working desktops, so throttle them to keep the machines calm
+add_lock(slave_locks,
+         ['tom-standard', 'osx-10.8'],
+         MasterLock("working-desktops", maxCount=1), 'counting')
+
 # The 'slaves' list defines the set of recognized buildslaves. Each element is
 # a BuildSlave object, specifying a unique slave name and password.  The same
 # slave name and password must be configured on the slave.
