WIP: try a try scheduler

--- a/master.cfg
+++ b/master.cfg
@@ -73,6 +73,7 @@ from buildbot.schedulers.forcesched import (ForceScheduler,
 from buildbot.schedulers.basic import SingleBranchScheduler, AnyBranchScheduler
 from buildbot.schedulers import timed
 from buildbot.schedulers.triggerable import Triggerable
+from buildbot.schedulers.trysched import Try_Jobdir
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
@@ -959,6 +960,13 @@ c['schedulers'] = sum([
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.3'], 'whl-33', 5, 30, True),
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.4'], 'whl-34', 5, 30, True),
 ]
+
+# Try scheduler for selected builds
+c['schedulers'].append(
+    Try_Jobdir(name="try1",
+               builderNames=['dipy-py2.7-osx-10.8',
+                             'dipy-py2.7-win32'],
+               jobdir="jobdir"))
 
 # Some factories
 
@@ -1927,7 +1935,7 @@ def test_regression(c):
     print "# builders:   ", len(c['builders'])
     print "# schedulers: ", len(c['schedulers'])
     assert(len(c['builders']) == 176)
-    assert(len(c['schedulers']) == 238)
+    assert(len(c['schedulers']) == 239)
     # print [sc.name for sc in c['schedulers']]
 
 test_easy_and_no_easy(c)
