WIP: more experience with try scheduler

--- a/master.cfg
+++ b/master.cfg
@@ -961,12 +961,7 @@ c['schedulers'] = sum([
     numpy_bot.nightly_scheduler(['numpy-bdist-whl-osx-3.4'], 'whl-34', 5, 30, True),
 ]
 
-# Try scheduler for selected builds
-c['schedulers'].append(
-    Try_Jobdir(name="try1",
-               builderNames=['dipy-py2.7-osx-10.8',
-                             'dipy-py2.7-win32'],
-               jobdir="jobdir"))
+# Try scheduler defined after builders
 
 # Some factories
 
@@ -1800,6 +1795,15 @@ for b in c['builders']:
         c['schedulers'].append(
             ForceScheduler(name=b.name, builderNames=[b.name]))
 
+
+####### Try scheduler for any build
+c['schedulers'].append(
+    Try_Jobdir(name="try1",
+               builderNames=[builder.name for builder in c['builders']],
+               jobdir="jobdir"))
+
+# A build seemed to work with this command from a dipy repo directory
+# $ buildbot try -c ssh -u buildbot --vc=git -b dipy-py2.7-osx-10.8 --host=nipy.bic.berkeley.edu --jobdir=~buildbot/nibotmi/jobdir --branch=master
 
 ####### STATUS TARGETS
 
